--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -62,7 +62,8 @@
         <div id="overlay-user" onclick="hideOverlay()"></div>
         <div class="login-window" id="popup-login-window">
             <!--            <button class="login-heading loginStyles">Log in</button>-->
-            <h1 class="login-heading">Log in</h1>
+            <button class="login-heading" id="Login">Log in</button>
+            <button class="signIn-heading" id="SignIn">Sign in</button>
             <form autocomplete="off" id="loginForm" method="post" onsubmit="return submitForm()"
                   th:action="@{api/auth/login}">
                 <div class="login-form email">
