--- a/src/main/resources/static/css/allLists.css
+++ b/src/main/resources/static/css/allLists.css
@@ -12,50 +12,28 @@
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .MainField {
-    position: absolute;
-    top: 20vh;
     width: 95vw;
     height: 70vh;
-    left: 2.5vw;
-    /*background-color: #B90F0F;*/
-    overflow-y: auto;
-    overflow-x: hidden;
+    padding: 8vh 0 0 0;
+    margin-left: 2vw;
     display: flex;
     flex-wrap: wrap;
 }
 
-/*____________________________________________________________________________________________________________________*/
-::-webkit-scrollbar {
-    width: 0.78125vw;
-}
-
-::-webkit-scrollbar-track {
-    margin-top: 2.7778vh;
-    border: 0.0520834vw solid black;
-    border-radius: 50px;
-    background: #F2E3B3;
-    margin-left: 0.5vw;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #733506;
-    border-radius: 50px;
-}
-
-/*____________________________________________________________________________________________________________________*/
 .ListField {
+    margin-right: 1.5vw;
     width: 29.7vw;
     height: 41.67vh;
     background-color: #F2E3B3;
     border-radius: 5vh;
     box-sizing: border-box;
-    margin-right: 1.5vw;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .ListFieldHeader {
@@ -65,49 +43,51 @@
     color: #FBEFC7;
     border-radius: 5vh 5vh 0 0;
     position: absolute;
-    font-family: 'Frank Ruhl Libre', serif;;
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 2vw;
     border: none;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
 }
 
-/*____________________________________________________________________________________________________________________*/
 .containerList {
-    position: absolute;
-    top: 9vh;
-    width: 27.6vw;
-    height: 30vh;
-    left: 0.7vw; /*2.605vw; - це щоб було рівномірно, але в нас там ще буде скрол, томку поки так*/
-    overflow-y: auto;
-    overflow-x: hidden;
+    padding-top: 8vh;
+    display: flex;
+    flex-direction: column;
+    gap: 0.52vw;
 }
 
 .userRecipeField {
+    margin: 0 1vw 0 1vw;
     display: flex;
-    justify-content: space-between;
-    width: 27.6vw;
-    height: 8vh;
+    flex-direction: column;
+    padding: 1.5vh;
+    width: 25vw;
     background-color: #FBEFC7;
     border-radius: 5vh;
-    left: 0.7vw;
 }
 
-.testForSwitch {
-    position: absolute;
+.testForSwitch, .testForSwitch2 {
+    text-decoration: none;
+    margin-left: 3vw;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.3vw;
-    top: 1vh;
-    left: 3vw;
+    margin-bottom: 0.46vh;
 }
 
-.testForSwitch2 {
-    flex: 1;
-    padding-top: 4vh;
-    padding-left: 3vw;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.3vw;
+.spacer {
+    margin-right: 1vw;
+}
+
+.testForSwitch2 span {
+    display: inline-block;
+}
+
+.Dessert, .Main-Dish, .First-Dish, .Salad, .Sauce, .Drink, .Snack, .Pastry, .Fish-Dish {
+    flex-direction: column;
+    width: 6vw;
+    height: 4vh;
 }
 
 .publishBlocked {
@@ -214,4 +194,20 @@
     display: flex;
     align-items: center;
     justify-content: center
+}
+
+::-webkit-scrollbar {
+    width: 0.78125vw;
+}
+
+::-webkit-scrollbar-track {
+    margin: 7vh 0 2.2vh 0.7vw;
+    border-radius: 50px;
+    background: #FBEFC7;
+    border: none;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #733506;
+    border-radius: 50px;
 }
