--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -105,41 +105,14 @@
         <div class="recipesFieldHeader">
             <p class="c7">User notes</p>
         </div>
-        <div class="container">
-            <div class="userRecipeField">
-
-                <!--TODO:  текст який треба замінити на теги рецептів як в all recipes тільки +1 заблокований для загалу-->
-                <div class="testForSwitch"> Title</div>
-                <div class="testForSwitch2"> Categories Time for cooking</div>
-                <button class="publishBlocked"> Publish</button>
-            </div>
-            <div class="userRecipeField userRecipeField2">
-
-                <!--TODO:  текст який треба замінити на теги рецептів як в all recipes тільки +1 заблокований для загалу-->
-                <div class="testForSwitch"> Title</div>
-                <div class="testForSwitch2"> Categories Time for cooking</div>
-                <button class="publish"> Publish</button>
-            </div>
-            <div class="userRecipeField userRecipeField3">
-
-                <!--TODO:  текст який треба замінити на теги рецептів як в all recipes тільки +1 заблокований для загалу-->
-                <div class="testForSwitch"> Title</div>
-                <div class="testForSwitch2"> Categories Time for cooking</div>
-                <img alt="recipeIcon" class="recipeIcon" src="../../images/Recipe.svg" th:src="@{../images/Recipe.svg}">
-            </div>
-            <div class="userRecipeField userRecipeField4">
-
-                <!--TODO:  текст який треба замінити на теги рецептів як в all recipes тільки +1 заблокований для загалу-->
-                <div class="testForSwitch"> Title</div>
-                <div class="testForSwitch2"> Categories Time for cooking</div>
-                <img alt="moderation" class="moderation" src="../../images/moderation.svg"
-                     th:src="@{images/moderation.svg}">
-            </div>
-            <div class="userRecipeField userRecipeField5">
-                <!--TODO:  текст який треба замінити на теги рецептів як в all recipes тільки +1 заблокований для загалу-->
-                <div class="testForSwitch"> Title</div>
-                <div class="testForSwitch2"> Categories Time for cooking</div>
-                <button class="publish"> Publish</button>
+        <div th:each="recipe : ${user.getRecipes()}">
+            <div class="container">
+                <div class="userRecipeField">
+                    <div class="testForSwitch" th:text="${recipe.getTitle()}"></div>
+                    <div class="testForSwitch2"
+                         th:text="${recipe.getCategory()} + ' ' + ${recipe.getCookingTime()}"></div>
+                    <button class="publishBlocked"> Publish</button>
+                </div>
             </div>
         </div>
     </div>
