--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Recipe Creation</title>
     <link rel="stylesheet" type="text/css" href="../../static/css/recipeCreation.css" >
+    <link href="../../static/css/headerIfooter.css" rel="stylesheet" th:href="@{../css/headerIfooter.css}"
+          type="text/css">
 </head>
 <header>
     <div class="header">
