fixed position of log out and log in buttons on user page

--- a/src/main/resources/static/css/allLists.css
+++ b/src/main/resources/static/css/allLists.css
@@ -161,23 +161,6 @@
     border-radius: 50px;
 }
 
-.containerList::-webkit-scrollbar {
-    width: 0.78125vw;
-}
-
-::-webkit-scrollbar-track {
-    margin-top: 2.7778vh;
-    border: 0.0520834vw solid black;
-    border-radius: 50px;
-    background: #F2E3B3;
-    margin-left: 2vw;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #733506;
-    border-radius: 50px;
-}
-
 /*____________________________________________________________________________________________________________________*/
 .publish {
     position: absolute;
@@ -201,7 +184,7 @@
 }
 
 ::-webkit-scrollbar-track {
-    margin: 7vh 0 2.2vh 0.7vw;
+    margin: 7vh 0 2.4vh 0;
     border-radius: 50px;
     background: #FBEFC7;
     border: none;
@@ -210,4 +193,14 @@
 ::-webkit-scrollbar-thumb {
     background: #733506;
     border-radius: 50px;
+}
+
+.comment-user-circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1vw;
+    margin-top: 1vh;
+    width: 3.6vw;
+    height: 5.6vh;
 }
