--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -64,7 +64,6 @@
     text-decoration: none;
 }
 
-
 .createList {
     top: 34vh;
     background-color: #F28705;
@@ -99,13 +98,15 @@
 }
 
 .logOut {
+    position: absolute;
     background-color: #F2B705;
-    top: 34.3vh;
+    top: 29.5vh;
 }
 
 .logInModerator {
+    position: absolute;
     background: rgba(242, 183, 5, 0.3);
-    top: 34.4vh;
+    top: 39vh;
     border: none;
     display: flex;
     align-items: center;
