added icons to recipes in user all lists

--- a/src/main/resources/static/css/allLists.css
+++ b/src/main/resources/static/css/allLists.css
@@ -49,6 +49,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 11;
 }
 
 .containerList {
@@ -59,33 +60,43 @@
 }
 
 .userRecipeField {
-    margin: 0 1vw 0 1vw;
+    margin: 0 0 0 1vw;
     display: flex;
     flex-direction: column;
-    padding: 1.5vh;
-    width: 25vw;
+    width: 27vw;
     background-color: #FBEFC7;
     border-radius: 5vh;
 }
 
 .testForSwitch, .testForSwitch2 {
     text-decoration: none;
-    margin-left: 3vw;
+    position: relative;
+    left: -2vw;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.3vw;
-    margin-bottom: 0.46vh;
+    margin-bottom: -1.5vh;
 }
 
 .spacer {
-    margin-right: 1vw;
+    margin-right: 0.8vw;
 }
 
 .testForSwitch2 span {
     display: inline-block;
+    position: relative;
+    left: 6vw;
+    margin-bottom: 1.5vh;
+}
+
+.recipeInfoContainer {
+    display: flex;
+    align-items: center;
 }
 
 .Dessert, .Main-Dish, .First-Dish, .Salad, .Sauce, .Drink, .Snack, .Pastry, .Fish-Dish {
-    flex-direction: column;
+    margin-top: 3vh;
+    position: relative;
+    left: -1vw;
     width: 6vw;
     height: 4vh;
 }
@@ -143,7 +154,6 @@
     top: 41.94vh;
 }
 
-/*____________________________________________________________________________________________________________________*/
 .containerList::-webkit-scrollbar {
     width: 0.78125vw;
 }
@@ -161,7 +171,6 @@
     border-radius: 50px;
 }
 
-/*____________________________________________________________________________________________________________________*/
 .publish {
     position: absolute;
     width: 4.511vw;
