--- a/src/main/resources/templates/moderator/moderatorAIReports.html
+++ b/src/main/resources/templates/moderator/moderatorAIReports.html
@@ -78,6 +78,8 @@
                 <div class=" notInBD InBD">Categories Title Time for cooking</div>
                 <div class="informationField">
                     <button id="processing">Take for processing</button>
+                    <button id="accept">Accept</button>
+                    <button id="reject">Reject</button>
                 </div>
             </div>
         </div>
