--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -380,7 +380,7 @@
             </div>
         </div>
         <div class="field" id="recipeContainer1" th:if="${recipes.size()==0}">
-            NO SUCH RECIPES!
+            <button class="noRecipes">There are no such recipes.</button>
         </div>
     </div>
 </main>
