corrected some buttons on moderator page

--- a/src/main/resources/templates/moderator/moderatorAIReports.html
+++ b/src/main/resources/templates/moderator/moderatorAIReports.html
@@ -6,12 +6,12 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="../../static/css/moderatorAIReports.css" rel="stylesheet" th:href="@{../css/moderatorAIReports.css}"
           type="text/css">
+    <link href="../../static/css/headerIfooter.css" rel="stylesheet" th:href="@{../css/headerIfooter.css}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <header>
     <div class="header">
-        <img alt="logo1" class="logo1" src="../../static/images/logo1.svg" th:src="@{images/logo1.svg}">
-
+        <img alt="logo" class="logo" src="../../static/images/logo.svg" th:src="@{images/logo.svg}">
 
         <form class="search-form">
             <img alt="magnifier" class="magnifier" src="../../static/images/magnifier.svg"
@@ -52,7 +52,7 @@
                 <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
                 <div class=" notInBD InBD">Categories Title Time for cooking</div>
                 <div class="informationField">
-                    <button id="processing">Take for processing</button>
+                    <button id="processing1">Take for processing</button>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
                 <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
                 <div class=" notInBD InBD">Categories Title Time for cooking</div>
                 <div class="informationField">
-                    <button id="processing">Take for processing</button>
+                    <button id="processing2">Take for processing</button>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
                 <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
                 <div class=" notInBD InBD">Categories Title Time for cooking</div>
                 <div class="informationField">
-                    <button id="processing">Take for processing</button>
+                    <button id="processing3">Take for processing</button>
                 </div>
             </div>
         </div>
