--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -155,8 +155,7 @@
     margin-top: 3vh;
     width: 51vw;
     height: 64vh;
-    /*background-color: #B90F0F; !*червоний для зручності щоб бачити межі контейнеру*!*/
-    left: 2.2vw; /*2.605vw; - це щоб було рівномірно, але в нас там ще буде скрол, томку поки так*/
+    left: 2.2vw;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -243,16 +242,14 @@
 }
 
 ::-webkit-scrollbar-track {
-    margin-top: 2.7778vh;
-    border: 0.0520834vw solid black;
-    border-radius: 50px;
-    background: #F2E3B3;
-    margin-left: 2vw;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    border-radius: 4.63vh;
 }
 
 ::-webkit-scrollbar-thumb {
     background: #733506;
-    border-radius: 50px;
+    border-radius: 4.63vh;
 }
 
 .publish {
