--- a/src/main/resources/templates/user/test.html
+++ b/src/main/resources/templates/user/test.html
@@ -1,179 +1,53 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>All recipes</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/test.css" >
+    <style>
+        .button {
+            display: inline-block;
+            padding: 15px 25px;
+            font-size: 24px;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+            outline: none;
+            color: #fff;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0 9px #999;
+            transition: all 2s;
+        }
+
+        .button:hover {
+            background-color: #3e8e41
+        }
+
+        .button:active {
+            background-color: #3e8e41;
+            box-shadow: 0 5px #666;
+            transform: translateY(4px);
+        }
+
+        .button:active:after {
+            width: 50%;
+            height: 50%;
+            position: absolute;
+            content: '';
+            background: #4CAF50;
+            left: 25%;
+            top: 25%;
+        }
+    </style>
 </head>
-<header>
-    <div class="header">
-        <img th:src="@{images/logo1.svg}" src="../../static/images/logo1.svg" alt = "logo1" class = "logo1">
-
-
-        <form class="search-form">
-            <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
-            <input name="query" placeholder="Search" type="search">
-        </form>
-        <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
-        <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
-        <div class="heart-container">
-            <div class="heart"
-                 onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
-                 onmouseout="restoreImage('heart-img', '../../static/images/heart.svg')">
-                <img id="heart-img" th:src="@{images/heart.svg}" src="../../static/images/heart.svg" alt="heart" class="heart">
-            </div>
-        </div>
-
-        <div class="user-container">
-            <div class="user"
-                 onmouseover="changeImage('user-img', '../../static/images/user-hover.svg')"
-                 onmouseout="restoreImage('user-img', '../../static/images/user.svg')">
-
-                <img id="user-img" th:src="@{images/user.svg}" src="../../static/images/user.svg" alt="user" class="user">
-            </div>
-        </div>
-
-        <a th:href="@{/}" href="main.html">
-            <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
-        </a>
-
-
-    </div>
-</header>
 <body>
 
-<main>
-    <h1 class="boardTwoTitle">Filters</h1>
-    <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
-    <button class="apply-button"><span>Apply</span></button>
-    <div class="ulBoard">
-        <div class="h1"></div>
-        <ul>
-            <li><img alt="categoriesI" class="categoriesI" th:src="@{images/Categories.svg}"  src="../../static/images/Categories.svg" >
-                Categories
-                <img alt="DropDownIcon" class="DropDownIcon" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
-                <ol>
-                    <li>
-                        <img alt="substance" class="substance" th:src="@{https://i.imgur.com/zphkXzb.png}" src="https://i.imgur.com/zphkXzb.png">
-                        First dishes
-                    </li>
-                    <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/Main%20Dish.svg" >
-                        Main dishes</li>
-                    <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
-                        Salads</li>
-                    <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/PastryI.svg" >
-                        Pastry</li>
-                    <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >
-                        Desserts</li>
-                    <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >
-                        Drinks</li>
-                    <li><img alt="snackI" class="snackI" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
-                        Snacks</li>
-                    <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >
-                        Fish dishes</li>
-                    <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/Sauce.svg" >
-                        Sauces</li>
-                </ol>
-            </li>
-            <hr>
-            <li><img alt="timeI" class="timeI" th:src="@{images/Time.svg}" src="../../static/images/Time.svg" >
-                Time</li>
-            <img alt="DropDownIconTime" class="DropDownIcon DropDownIconTime" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
-            <hr>
-            <li><img alt="alphabetI" class="alphabetI" th:src="@{images/Alphabet.svg}" src="../../static/images/Alphabet.svg" >
-                Alphabet</li>
-            <img alt="DropDownIconAlphabet" class="DropDownIcon DropDownIconAlphabet" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
-            <hr>
-            <li><img alt="ratingI" class="ratingI" th:src="@{images/Rating.svg}" src="../../static/images/Rating.svg" >
-                Rating</li>
-            <img alt="DropDownIconRating" class="DropDownIcon DropDownIconRating" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
-            <hr>
-            <li><img alt="ingredientsI" class="ingredientsI" th:src="@{images/ingredients.svg}" src="../../static/images/ingredients.svg" >
-                Ingredients</li>
-            <img alt="DropDownIconIngredients" class="DropDownIcon DropDownIconIngredients" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
-            <hr>
-            <li><img alt="devicesI" class="devicesI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
-                Devices</li>
-            <img alt="DropDownIconDevices" class="DropDownIcon DropDownIconDevices" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
-            <hr>
-            <li><img alt="ingredientsI" class="ingredientsI" th:src="@{images/ingredients.svg}" src="../../static/images/ingredients.svg" >
-                Ingredients</li>
-            <hr>
-            <li><img alt="devicesI" class="devicesI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
-                Devices</li>
-        </ul>
-    </div>
-    <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
-    <div class="mainField">
-        <div class="field ">
-            <div class="ol">
-                <ol>
-                    <li> <div class="smallerField">
-                        <!--                        <h2 class="h2">Title</h2>-->
-                        <table th:each="recipe: ${recipes}">
-                            <tr>
-                                <td th:text="${recipe.getCategory().getTitle()}"></td>
-                            </tr>
+<button class="button">Button</button>
 
-                            <tr>
-                                <a th:href="@{/recipe/{id}(id=${recipe.getId()})}" th:text="${recipe.getTitle()}"></a>
-                                <td th:text="${recipe.getCookingTime()}+' minutes'"></td>
-                            </tr>
-                            <tr>
-                                <td th:text="${recipe.getAverageMark()}">
-                                </td>
-                            </tr>
-                        </table>
-                        <!--                        <p class="h2-down"> Categories  </p>-->
-                        <!--                        <p class="h2-right">Time for cooking   </p>-->
-                        <!--                        <p class="h2-right"> 4.5</p>-->
-                    </div>
-                    </li>
-                    <li><div class="smallerField smallerField-down1 "></div></li>
-                    <li><div class="smallerField smallerField-down2 "></div></li>
-                    <li><div class="smallerField smallerField-down3 "></div></li>
-                    <li><div class="smallerField smallerField-down4 "></div></li>
-                </ol>
-            </div>
-        </div>
-    </div>
-</main>
+<script>
+    document.querySelector(".button").addEventListener("click", function () {
+        this.classList.add("active");
+    });
+</script>
 
 </body>
-<footer class="footer">
-    <button class="support-button" id="support-btn"><span>Support</span></button>
-
-    <div id="overlay" onclick="hideOverlay()"></div>
-
-    <div class="window" id="popup-window">  <!-- Вікно, яке з'являється при натисканні -->
-        <div class="inner-window">
-            <input name="query" placeholder="Enter feedback" type="search">
-        </div>
-
-        <button id="send-button">Send</button>
-    </div>
-
-    <div class="copyright">© Company policy and privacy rules</div>
-
-    <div class="circle-container telegram-container">
-        <div
-                class="telegram"
-                onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
-                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')"
-        >
-            <img id="telegram-img" th:src="@{images/telegram.svg}"  src="../../static/images/telegram.svg" alt="telegram" class="telegram">
-        </div>
-    </div>
-
-    <div class="circle-container instagram-container">
-        <div
-                class="instagram"
-                onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
-                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
-        >
-            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../static/images/inst.svg" alt="instagram" class="instagram">
-        </div>
-    </div>
-</footer>
-<script th:href="@{js/scripts.js}" src="../../static/js/scripts.js"></script>
 </html>
