--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -218,23 +218,10 @@
     justify-content: center;
 }
 
-#publish:hover, #FavoriteList:hover, .UserList:hover,
+#publish:hover, #FavoriteList-logout:hover, #FavoriteList-login:hover, .UserList:hover,
 .Report:hover, .create-list:hover, #confirm-list-btn:hover {
     background-color: #FBEFC7;
     border: 0.5vh solid #F28705;
-}
-
-.c8 {
-    display: flex;
-    align-items: center;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.5625vw; /*48*/
-    margin-top: 1.1vh;
-    margin-left: 1.2vw;
-    flex: 1;
-    border: none;
-    border-radius: 5.5vh;
-    outline: none;
 }
 
 .commentField {
