--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -88,7 +88,7 @@
             <h1 class="login-heading">Log in</h1>
             <form id="loginForm" method="post" onsubmit="return submitForm()" th:action="@{api/auth/login}">
                 <div class="login-form email">
-                    <input name="username" placeholder="Enter email" required type="text">
+                    <input name="username" placeholder="Enter login" required type="text">
                 </div>
                 <div class="login-form password">
                     <input name="password" placeholder="Enter password" required type="password">
