--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -88,7 +88,7 @@
             <form autocomplete="off" id="loginForm" method="post" onsubmit="return submitForm()"
                   th:action="@{api/auth/login}">
                 <div class="login-form email">
-                    <input name="username" placeholder="Enter email" required type="text">
+                    <input autocomplete="off" name="username" placeholder="Enter login">
                 </div>
                 <div class="login-form password">
                     <input name="password" placeholder="Enter password" required type="password">
