--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -83,8 +83,7 @@
         <form method="post" th:action="@{/api/logout}">
             <button class="userButton logOut">Log out</button>
         </form>
-        <a class="userButton logInModerator" href="../moderator/moderatorPage.html"
-           th:href="@{/moderator}">Log in as moderator</a>
+        <a class="userButton logInModerator" id="login-moderator-btn">Log in as moderator</a>
     </div>
 
     <div id="overlay-list" onclick="hideOverlay()"></div>
@@ -99,6 +98,18 @@
             <button class="confirm-list-button" id="confirm-list-btn">Confirm</button>
         </form>
     </div>
+
+
+    <div id="overlay-password" onclick="hideOverlay()"></div>
+
+    <div class="list-container" id="password-popup-window" style="top: 50vh;">
+        <div class="list-name">
+            <input id="password" name="title" placeholder="Enter password" type="text">
+        </div>
+        <a class="confirm-list-button" href="../moderator/moderatorPage.html" id="confirm-password-btn"
+           th:href="@{/moderator}">Confirm</a>
+    </div>
+
 
     <div class="recipesField">
         <div class="recipesFieldHeader">
@@ -116,7 +127,6 @@
         </div>
     </div>
 </main>
-
 <footer class="footer">
     <button class="support-button" id="support-btn"><span>Support</span></button>
 
@@ -154,7 +164,6 @@
         </div>
     </div>
 </footer>
-
 <script src="../../js/scripts.js" th:href="@{js/scripts.js}"></script>
 <script>
     document.getElementById("createList-btn").addEventListener("click",
@@ -163,6 +172,11 @@
         () => hideOverlay("overlay-list", "list-field-popup-window"));
     document.getElementById("confirm-list-btn").addEventListener("click",
         () => hideOverlay("overlay-list", "list-field-popup-window"));
+
+    document.getElementById("login-moderator-btn").addEventListener("click",
+        () => showOverlay("overlay-password", "password-popup-window"));
+    document.getElementById("overlay-password").addEventListener("click",
+        () => hideOverlay("overlay-password", "password-popup-window"));
 
     document.getElementById("heart-btn").addEventListener("click",
         () => showOverlay("overlay-favorite", "favorite-popup-window"));
