--- a/src/main/resources/static/css/headerIfooter.css
+++ b/src/main/resources/static/css/headerIfooter.css
@@ -98,6 +98,7 @@ body {
     width: 3.125vw;
 }
 
+/*____________________________________________________________________________________________________________________*/
 .footer {
     position: fixed;
     width: 100%;
@@ -166,6 +167,7 @@ body {
     font-size: 2vw;
 }
 
+/*____________________________________________________________________________________________________________________*/
 .login-window {
     position: fixed;
     display: none;
@@ -189,11 +191,16 @@ body {
 }
 
 .email {
+    position: absolute;
     top: 7vh;
+    display: flex;
+    max-height: 5vh;
 }
 
 .password {
+    position: absolute;
     top: 14.8vh;
+    display: flex;
 }
 
 .login-heading {
@@ -206,7 +213,7 @@ body {
 
 .email input, .password input {
     width: 21.979vw;
-    height: 6.19vh;
+    height: 6vh; /*6.19vh*/
     flex: 1;
     border: none;
     background: #FBEFC7;
@@ -233,7 +240,51 @@ body {
     font-size: 2vw;
     color: #FBEFC7;
     border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center
 }
+
+#Login {
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.1875vw; /*42*/
+    color: #733506;
+    left: 2vw;
+    top: 0.5vh;
+    background-color: #F2E3B3;
+    width: 9vw;
+    height: 6vh;
+    border-radius: 5vh;
+    border-color: #F2B705;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+#SignIn {
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.1875vw; /*42*/
+    color: #733506;
+    position: absolute;
+    right: 2vw;
+    top: 0.5vh;
+    background-color: #F2E3B3;
+    width: 9vw;
+    height: 6vh;
+    border-radius: 5vh;
+    border-color: #F2B705;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+#Login:hover, #SignIn:hover {
+    background-color: #F2B705;
+    color: black;
+}
+
+/*____________________________________________________________________________________________________________________*/
 
 #send-button {
     position: absolute;
@@ -339,6 +390,7 @@ body {
     color: #F2E3B3;
 }
 
+/*____________________________________________________________________________________________________________________*/
 .favoriteLists-window {
     position: absolute;
     display: none;
